// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Developers should render the component for contributors with items 1`] = `
.emotion-0 {
  font-weight: 700;
  margin-bottom: 10px;
}

.emotion-8 > * {
  margin: 5px;
}

<Developers
  type="contributors"
>
  <DevelopersTitle
    type="contributors"
  >
    <StyledText
      variant="subtitle1"
    >
      <ForwardRef(Text)
        className="emotion-0 emotion-1"
        variant="subtitle1"
      >
        <WithStyles(ForwardRef(Typography))
          className="emotion-0 emotion-1"
          variant="subtitle1"
        >
          <ForwardRef(Typography)
            className="emotion-0 emotion-1"
            classes={
              Object {
                "alignCenter": "MuiTypography-alignCenter",
                "alignJustify": "MuiTypography-alignJustify",
                "alignLeft": "MuiTypography-alignLeft",
                "alignRight": "MuiTypography-alignRight",
                "body1": "MuiTypography-body1",
                "body2": "MuiTypography-body2",
                "button": "MuiTypography-button",
                "caption": "MuiTypography-caption",
                "colorError": "MuiTypography-colorError",
                "colorInherit": "MuiTypography-colorInherit",
                "colorPrimary": "MuiTypography-colorPrimary",
                "colorSecondary": "MuiTypography-colorSecondary",
                "colorTextPrimary": "MuiTypography-colorTextPrimary",
                "colorTextSecondary": "MuiTypography-colorTextSecondary",
                "displayBlock": "MuiTypography-displayBlock",
                "displayInline": "MuiTypography-displayInline",
                "gutterBottom": "MuiTypography-gutterBottom",
                "h1": "MuiTypography-h1",
                "h2": "MuiTypography-h2",
                "h3": "MuiTypography-h3",
                "h4": "MuiTypography-h4",
                "h5": "MuiTypography-h5",
                "h6": "MuiTypography-h6",
                "noWrap": "MuiTypography-noWrap",
                "overline": "MuiTypography-overline",
                "paragraph": "MuiTypography-paragraph",
                "root": "MuiTypography-root",
                "srOnly": "MuiTypography-srOnly",
                "subtitle1": "MuiTypography-subtitle1",
                "subtitle2": "MuiTypography-subtitle2",
              }
            }
            variant="subtitle1"
          >
            <h6
              className="MuiTypography-root emotion-0 emotion-1 MuiTypography-subtitle1"
            >
              sidebar.contributors.title
            </h6>
          </ForwardRef(Typography)>
        </WithStyles(ForwardRef(Typography))>
      </ForwardRef(Text)>
    </StyledText>
  </DevelopersTitle>
  <StyledBox
    display="flex"
    flexWrap="wrap"
    margin="10px 0 10px 0"
  >
    <Box
      className="emotion-8 emotion-9"
      display="flex"
      flexWrap="wrap"
      margin="10px 0 10px 0"
    >
      <Styled(MuiBox)
        className="emotion-8 emotion-9"
        display="flex"
        flexWrap="wrap"
        margin="10px 0 10px 0"
      >
        <div
          className="MuiBox-root MuiBox-root-2 emotion-8 emotion-9"
        >
          <ForwardRef(ToolTip)
            key="dave.methvin@gmail.com"
            title="dmethvin"
          >
            <WithStyles(ForwardRef(Tooltip))
              innerRef={null}
              title="dmethvin"
            >
              <ForwardRef(Tooltip)
                classes={
                  Object {
                    "arrow": "MuiTooltip-arrow",
                    "popper": "MuiTooltip-popper",
                    "popperArrow": "MuiTooltip-popperArrow",
                    "popperInteractive": "MuiTooltip-popperInteractive",
                    "tooltip": "MuiTooltip-tooltip",
                    "tooltipArrow": "MuiTooltip-tooltipArrow",
                    "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom",
                    "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft",
                    "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight",
                    "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop",
                    "touch": "MuiTooltip-touch",
                  }
                }
                title="dmethvin"
              >
                <ForwardRef(Avatar)
                  alt="dmethvin"
                  aria-describedby={null}
                  className=""
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="dmethvin"
                >
                  <WithStyles(ForwardRef(Avatar))
                    alt="dmethvin"
                    aria-describedby={null}
                    className=""
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                    title="dmethvin"
                  >
                    <ForwardRef(Avatar)
                      alt="dmethvin"
                      aria-describedby={null}
                      className=""
                      classes={
                        Object {
                          "circle": "MuiAvatar-circle",
                          "colorDefault": "MuiAvatar-colorDefault",
                          "fallback": "MuiAvatar-fallback",
                          "img": "MuiAvatar-img",
                          "root": "MuiAvatar-root",
                          "rounded": "MuiAvatar-rounded",
                          "square": "MuiAvatar-square",
                        }
                      }
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      onTouchStart={[Function]}
                      title="dmethvin"
                    >
                      <div
                        aria-describedby={null}
                        className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        onTouchStart={[Function]}
                        title="dmethvin"
                      >
                        <ForwardRef
                          className="MuiAvatar-fallback"
                        >
                          <WithStyles(ForwardRef(SvgIcon))
                            className="MuiAvatar-fallback"
                          >
                            <ForwardRef(SvgIcon)
                              className="MuiAvatar-fallback"
                              classes={
                                Object {
                                  "colorAction": "MuiSvgIcon-colorAction",
                                  "colorDisabled": "MuiSvgIcon-colorDisabled",
                                  "colorError": "MuiSvgIcon-colorError",
                                  "colorPrimary": "MuiSvgIcon-colorPrimary",
                                  "colorSecondary": "MuiSvgIcon-colorSecondary",
                                  "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                  "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                  "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                  "root": "MuiSvgIcon-root",
                                }
                              }
                            >
                              <svg
                                aria-hidden="true"
                                className="MuiSvgIcon-root MuiAvatar-fallback"
                                focusable="false"
                                role="presentation"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                                />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef>
                      </div>
                    </ForwardRef(Avatar)>
                  </WithStyles(ForwardRef(Avatar))>
                </ForwardRef(Avatar)>
                <ForwardRef(Popper)
                  anchorEl={
                    <div
                      class="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
                      title="dmethvin"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiAvatar-fallback"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                  }
                  className="MuiTooltip-popper"
                  id={null}
                  open={false}
                  placement="bottom"
                  popperOptions={
                    Object {
                      "modifiers": Object {
                        "arrow": Object {
                          "element": null,
                          "enabled": false,
                        },
                      },
                    }
                  }
                  transition={true}
                />
              </ForwardRef(Tooltip)>
            </WithStyles(ForwardRef(Tooltip))>
          </ForwardRef(ToolTip)>
          <ForwardRef(ToolTip)
            key="m.goleb@gmail.com"
            title="mgol"
          >
            <WithStyles(ForwardRef(Tooltip))
              innerRef={null}
              title="mgol"
            >
              <ForwardRef(Tooltip)
                classes={
                  Object {
                    "arrow": "MuiTooltip-arrow",
                    "popper": "MuiTooltip-popper",
                    "popperArrow": "MuiTooltip-popperArrow",
                    "popperInteractive": "MuiTooltip-popperInteractive",
                    "tooltip": "MuiTooltip-tooltip",
                    "tooltipArrow": "MuiTooltip-tooltipArrow",
                    "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom",
                    "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft",
                    "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight",
                    "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop",
                    "touch": "MuiTooltip-touch",
                  }
                }
                title="mgol"
              >
                <ForwardRef(Avatar)
                  alt="mgol"
                  aria-describedby={null}
                  className=""
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="mgol"
                >
                  <WithStyles(ForwardRef(Avatar))
                    alt="mgol"
                    aria-describedby={null}
                    className=""
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                    title="mgol"
                  >
                    <ForwardRef(Avatar)
                      alt="mgol"
                      aria-describedby={null}
                      className=""
                      classes={
                        Object {
                          "circle": "MuiAvatar-circle",
                          "colorDefault": "MuiAvatar-colorDefault",
                          "fallback": "MuiAvatar-fallback",
                          "img": "MuiAvatar-img",
                          "root": "MuiAvatar-root",
                          "rounded": "MuiAvatar-rounded",
                          "square": "MuiAvatar-square",
                        }
                      }
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      onTouchStart={[Function]}
                      title="mgol"
                    >
                      <div
                        aria-describedby={null}
                        className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        onTouchStart={[Function]}
                        title="mgol"
                      >
                        <ForwardRef
                          className="MuiAvatar-fallback"
                        >
                          <WithStyles(ForwardRef(SvgIcon))
                            className="MuiAvatar-fallback"
                          >
                            <ForwardRef(SvgIcon)
                              className="MuiAvatar-fallback"
                              classes={
                                Object {
                                  "colorAction": "MuiSvgIcon-colorAction",
                                  "colorDisabled": "MuiSvgIcon-colorDisabled",
                                  "colorError": "MuiSvgIcon-colorError",
                                  "colorPrimary": "MuiSvgIcon-colorPrimary",
                                  "colorSecondary": "MuiSvgIcon-colorSecondary",
                                  "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                  "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                  "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                  "root": "MuiSvgIcon-root",
                                }
                              }
                            >
                              <svg
                                aria-hidden="true"
                                className="MuiSvgIcon-root MuiAvatar-fallback"
                                focusable="false"
                                role="presentation"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                                />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef>
                      </div>
                    </ForwardRef(Avatar)>
                  </WithStyles(ForwardRef(Avatar))>
                </ForwardRef(Avatar)>
                <ForwardRef(Popper)
                  anchorEl={
                    <div
                      class="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
                      title="mgol"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiAvatar-fallback"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                  }
                  className="MuiTooltip-popper"
                  id={null}
                  open={false}
                  placement="bottom"
                  popperOptions={
                    Object {
                      "modifiers": Object {
                        "arrow": Object {
                          "element": null,
                          "enabled": false,
                        },
                      },
                    }
                  }
                  transition={true}
                />
              </ForwardRef(Tooltip)>
            </WithStyles(ForwardRef(Tooltip))>
          </ForwardRef(ToolTip)>
        </div>
      </Styled(MuiBox)>
    </Box>
  </StyledBox>
</Developers>
`;

exports[`test Developers should render the component for maintainers with items 1`] = `
.emotion-0 {
  font-weight: 700;
  margin-bottom: 10px;
}

.emotion-8 > * {
  margin: 5px;
}

<Developers
  type="maintainers"
>
  <DevelopersTitle
    type="maintainers"
  >
    <StyledText
      variant="subtitle1"
    >
      <ForwardRef(Text)
        className="emotion-0 emotion-1"
        variant="subtitle1"
      >
        <WithStyles(ForwardRef(Typography))
          className="emotion-0 emotion-1"
          variant="subtitle1"
        >
          <ForwardRef(Typography)
            className="emotion-0 emotion-1"
            classes={
              Object {
                "alignCenter": "MuiTypography-alignCenter",
                "alignJustify": "MuiTypography-alignJustify",
                "alignLeft": "MuiTypography-alignLeft",
                "alignRight": "MuiTypography-alignRight",
                "body1": "MuiTypography-body1",
                "body2": "MuiTypography-body2",
                "button": "MuiTypography-button",
                "caption": "MuiTypography-caption",
                "colorError": "MuiTypography-colorError",
                "colorInherit": "MuiTypography-colorInherit",
                "colorPrimary": "MuiTypography-colorPrimary",
                "colorSecondary": "MuiTypography-colorSecondary",
                "colorTextPrimary": "MuiTypography-colorTextPrimary",
                "colorTextSecondary": "MuiTypography-colorTextSecondary",
                "displayBlock": "MuiTypography-displayBlock",
                "displayInline": "MuiTypography-displayInline",
                "gutterBottom": "MuiTypography-gutterBottom",
                "h1": "MuiTypography-h1",
                "h2": "MuiTypography-h2",
                "h3": "MuiTypography-h3",
                "h4": "MuiTypography-h4",
                "h5": "MuiTypography-h5",
                "h6": "MuiTypography-h6",
                "noWrap": "MuiTypography-noWrap",
                "overline": "MuiTypography-overline",
                "paragraph": "MuiTypography-paragraph",
                "root": "MuiTypography-root",
                "srOnly": "MuiTypography-srOnly",
                "subtitle1": "MuiTypography-subtitle1",
                "subtitle2": "MuiTypography-subtitle2",
              }
            }
            variant="subtitle1"
          >
            <h6
              className="MuiTypography-root emotion-0 emotion-1 MuiTypography-subtitle1"
            >
              sidebar.maintainers.title
            </h6>
          </ForwardRef(Typography)>
        </WithStyles(ForwardRef(Typography))>
      </ForwardRef(Text)>
    </StyledText>
  </DevelopersTitle>
  <StyledBox
    display="flex"
    flexWrap="wrap"
    margin="10px 0 10px 0"
  >
    <Box
      className="emotion-8 emotion-9"
      display="flex"
      flexWrap="wrap"
      margin="10px 0 10px 0"
    >
      <Styled(MuiBox)
        className="emotion-8 emotion-9"
        display="flex"
        flexWrap="wrap"
        margin="10px 0 10px 0"
      >
        <div
          className="MuiBox-root MuiBox-root-1 emotion-8 emotion-9"
        >
          <ForwardRef(ToolTip)
            key="dave.methvin@gmail.com"
            title="dmethvin"
          >
            <WithStyles(ForwardRef(Tooltip))
              innerRef={null}
              title="dmethvin"
            >
              <ForwardRef(Tooltip)
                classes={
                  Object {
                    "arrow": "MuiTooltip-arrow",
                    "popper": "MuiTooltip-popper",
                    "popperArrow": "MuiTooltip-popperArrow",
                    "popperInteractive": "MuiTooltip-popperInteractive",
                    "tooltip": "MuiTooltip-tooltip",
                    "tooltipArrow": "MuiTooltip-tooltipArrow",
                    "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom",
                    "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft",
                    "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight",
                    "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop",
                    "touch": "MuiTooltip-touch",
                  }
                }
                title="dmethvin"
              >
                <ForwardRef(Avatar)
                  alt="dmethvin"
                  aria-describedby={null}
                  className=""
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="dmethvin"
                >
                  <WithStyles(ForwardRef(Avatar))
                    alt="dmethvin"
                    aria-describedby={null}
                    className=""
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                    title="dmethvin"
                  >
                    <ForwardRef(Avatar)
                      alt="dmethvin"
                      aria-describedby={null}
                      className=""
                      classes={
                        Object {
                          "circle": "MuiAvatar-circle",
                          "colorDefault": "MuiAvatar-colorDefault",
                          "fallback": "MuiAvatar-fallback",
                          "img": "MuiAvatar-img",
                          "root": "MuiAvatar-root",
                          "rounded": "MuiAvatar-rounded",
                          "square": "MuiAvatar-square",
                        }
                      }
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      onTouchStart={[Function]}
                      title="dmethvin"
                    >
                      <div
                        aria-describedby={null}
                        className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        onTouchStart={[Function]}
                        title="dmethvin"
                      >
                        <ForwardRef
                          className="MuiAvatar-fallback"
                        >
                          <WithStyles(ForwardRef(SvgIcon))
                            className="MuiAvatar-fallback"
                          >
                            <ForwardRef(SvgIcon)
                              className="MuiAvatar-fallback"
                              classes={
                                Object {
                                  "colorAction": "MuiSvgIcon-colorAction",
                                  "colorDisabled": "MuiSvgIcon-colorDisabled",
                                  "colorError": "MuiSvgIcon-colorError",
                                  "colorPrimary": "MuiSvgIcon-colorPrimary",
                                  "colorSecondary": "MuiSvgIcon-colorSecondary",
                                  "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                  "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                  "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                  "root": "MuiSvgIcon-root",
                                }
                              }
                            >
                              <svg
                                aria-hidden="true"
                                className="MuiSvgIcon-root MuiAvatar-fallback"
                                focusable="false"
                                role="presentation"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                                />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef>
                      </div>
                    </ForwardRef(Avatar)>
                  </WithStyles(ForwardRef(Avatar))>
                </ForwardRef(Avatar)>
                <ForwardRef(Popper)
                  anchorEl={
                    <div
                      class="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
                      title="dmethvin"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiAvatar-fallback"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                  }
                  className="MuiTooltip-popper"
                  id={null}
                  open={false}
                  placement="bottom"
                  popperOptions={
                    Object {
                      "modifiers": Object {
                        "arrow": Object {
                          "element": null,
                          "enabled": false,
                        },
                      },
                    }
                  }
                  transition={true}
                />
              </ForwardRef(Tooltip)>
            </WithStyles(ForwardRef(Tooltip))>
          </ForwardRef(ToolTip)>
          <ForwardRef(ToolTip)
            key="m.goleb@gmail.com"
            title="mgol"
          >
            <WithStyles(ForwardRef(Tooltip))
              innerRef={null}
              title="mgol"
            >
              <ForwardRef(Tooltip)
                classes={
                  Object {
                    "arrow": "MuiTooltip-arrow",
                    "popper": "MuiTooltip-popper",
                    "popperArrow": "MuiTooltip-popperArrow",
                    "popperInteractive": "MuiTooltip-popperInteractive",
                    "tooltip": "MuiTooltip-tooltip",
                    "tooltipArrow": "MuiTooltip-tooltipArrow",
                    "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom",
                    "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft",
                    "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight",
                    "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop",
                    "touch": "MuiTooltip-touch",
                  }
                }
                title="mgol"
              >
                <ForwardRef(Avatar)
                  alt="mgol"
                  aria-describedby={null}
                  className=""
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="mgol"
                >
                  <WithStyles(ForwardRef(Avatar))
                    alt="mgol"
                    aria-describedby={null}
                    className=""
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                    title="mgol"
                  >
                    <ForwardRef(Avatar)
                      alt="mgol"
                      aria-describedby={null}
                      className=""
                      classes={
                        Object {
                          "circle": "MuiAvatar-circle",
                          "colorDefault": "MuiAvatar-colorDefault",
                          "fallback": "MuiAvatar-fallback",
                          "img": "MuiAvatar-img",
                          "root": "MuiAvatar-root",
                          "rounded": "MuiAvatar-rounded",
                          "square": "MuiAvatar-square",
                        }
                      }
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      onTouchStart={[Function]}
                      title="mgol"
                    >
                      <div
                        aria-describedby={null}
                        className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        onTouchStart={[Function]}
                        title="mgol"
                      >
                        <ForwardRef
                          className="MuiAvatar-fallback"
                        >
                          <WithStyles(ForwardRef(SvgIcon))
                            className="MuiAvatar-fallback"
                          >
                            <ForwardRef(SvgIcon)
                              className="MuiAvatar-fallback"
                              classes={
                                Object {
                                  "colorAction": "MuiSvgIcon-colorAction",
                                  "colorDisabled": "MuiSvgIcon-colorDisabled",
                                  "colorError": "MuiSvgIcon-colorError",
                                  "colorPrimary": "MuiSvgIcon-colorPrimary",
                                  "colorSecondary": "MuiSvgIcon-colorSecondary",
                                  "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                  "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                  "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                  "root": "MuiSvgIcon-root",
                                }
                              }
                            >
                              <svg
                                aria-hidden="true"
                                className="MuiSvgIcon-root MuiAvatar-fallback"
                                focusable="false"
                                role="presentation"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                                />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef>
                      </div>
                    </ForwardRef(Avatar)>
                  </WithStyles(ForwardRef(Avatar))>
                </ForwardRef(Avatar)>
                <ForwardRef(Popper)
                  anchorEl={
                    <div
                      class="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
                      title="mgol"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiAvatar-fallback"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                  }
                  className="MuiTooltip-popper"
                  id={null}
                  open={false}
                  placement="bottom"
                  popperOptions={
                    Object {
                      "modifiers": Object {
                        "arrow": Object {
                          "element": null,
                          "enabled": false,
                        },
                      },
                    }
                  }
                  transition={true}
                />
              </ForwardRef(Tooltip)>
            </WithStyles(ForwardRef(Tooltip))>
          </ForwardRef(ToolTip)>
        </div>
      </Styled(MuiBox)>
    </Box>
  </StyledBox>
</Developers>
`;

exports[`test Developers should render the component with no items 1`] = `
<Developers
  type="maintainers"
/>
`;
